--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name="com.martinboy.managertool.MobileConnectStateReceiver"/>
+
         <!--<activity android:name=".MainActivity">-->
         <!--<intent-filter>-->
         <!--<action android:name="android.intent.action.MAIN" />-->
