--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
 
         <activity android:name=".DownloadActivity"/>
 
+        <activity android:name=".SharePreferenceTestActivity"/>
+
     </application>
 
 </manifest>
