Add ViewUtils Method(BaseViewUtilsActivity BaseViewUtilsFragment ViewUtils) Add DisplayUtils

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".CustomFragmentActivity"/>
+
         <activity android:name=".CheckMobileStatusActivity"/>
 
         <receiver android:name="com.martinboy.managertool.MobileConnectStateReceiver"/>
